<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version>
	</parent>

	<groupId>no.nav.dokopp</groupId>
	<artifactId>dokopp</artifactId>
	<version>1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>app</module>
	</modules>

	<properties>
		<java.version>25</java.version>

		<camel.version>4.20.0</camel.version>
		<com.ibm.mq.jakarta.client.version>9.4.5.0</com.ibm.mq.jakarta.client.version>
		<logstash-logback-encode.version>9.0</logstash-logback-encode.version>
		<cxf.version>4.2.0</cxf.version>

		<dok-legacy-tjenestespesifikasjoner.version>44-7d14e70</dok-legacy-tjenestespesifikasjoner.version>

		<!-- Test dependencies -->
		<wiremock-spring-boot.version>4.2.1</wiremock-spring-boot.version>

		<!-- plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-bom</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-dependencies</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-bom</artifactId>
				<version>${cxf.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.ibm.mq</groupId>
				<artifactId>com.ibm.mq.jakarta.client</artifactId>
				<version>${com.ibm.mq.jakarta.client.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encode.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav.dok</groupId>
				<artifactId>dok-domene-arkiverdokumentproduksjon-v1-tjenestespesifikasjon</artifactId>
				<version>${dok-legacy-tjenestespesifikasjoner.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.tjenester</groupId>
				<artifactId>opprettoppgave-tjenestespesifikasjon</artifactId>
				<version>${dok-legacy-tjenestespesifikasjoner.version}</version>
			</dependency>

			<!-- test -->
			<dependency>
				<groupId>org.wiremock.integrations</groupId>
				<artifactId>wiremock-spring-boot</artifactId>
				<version>${wiremock-spring-boot.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>